--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 CLAUDE_API_KEY=YOUR_CLAUDE_API_KEY
 REDIRECT_URL=https://localhost:3458/auth/callback
 SHOPIFY_API_KEY=YOUR_APP_CLIENT_ID
+SHOPIFY_API_SECRET=YOUR_APP_CLIENT_SECRET
