change fly db settings

--- a/fly.toml
+++ b/fly.toml
@@ -11,6 +11,7 @@ primary_region = 'ams'
 [env]
   HOST = '0.0.0.0'
   PORT = '3000'
+  DATABASE_URL = 'file:/data/dev.sqlite'
   SCOPES = 'customer_read_customers,customer_read_orders,customer_read_store_credit_account_transactions,customer_read_store_credit_accounts,unauthenticated_read_product_listings'
   SHOPIFY_APP_URL = 'https://shop-chat-agent-prod.fly.dev'
 
